# declared_env

./: .flake8  .gitignore  .gitlint  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.pip  requirements-dev.txt  requirements-test.pip
.github/workflows/: check.yml  lint.yml  merge_to_branch.yaml  python-checks.yml  test.yml
declared_env/: __init__.py  _declared_variables.py  _environment_parser.py  _exceptions.py  _prefixable.py
test/: conftest.py  test_declared_env.py  test_variables.py
