[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "declared_env"
author = "Andrey Solomatin"
author-email = "cjkjvfnby@gmail.com"
home-page = "https://github.com/Cjkjvfnby/declared_env"

requires-python=">=3.6"

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore=true


[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--showlocals",
]

[tool.pylint.main]
jobs = 0

[tool.pylint."messages control"]
disable = [
    "C", # documentation
    "import-error",
    "too-few-public-methods"
]
