[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "declared_env"
author = "Andrey Solomatin"
author-email = "cjkjvfnby@gmail.com"
home-page = "https://github.com/Cjkjvfnby/declared_env"

requires-python = ">=3.6"

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore = true


[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--showlocals",
]

[tool.pylint.main]
jobs = 0

[tool.pylint."messages control"]
disable = [
    "C", # documentation
    "import-error",
    "too-few-public-methods"
]
[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN101",
    "D104", # no docstring in public package
    "D200", # One-line docstring should fit on one line with quotes
    "ANN401", "ANN204",
    "D212",
    "RSE102",
]
line-length = 88


#         # handled by black
#         E203, E501, W503,
#         ANN101, ANN204, ANN401,
#
#
#         D200,
#         #  Missing docstring in __init__
#         D107,

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test/*" = ["D10", "D101", "D103", "S101", "ANN",]
"./declared_env/_exceptions.py" = ["D107"]
