[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "declared_env"
author = "Andrey Solomatin"
author-email = "cjkjvfnby@gmail.com"
home-page = "https://github.com/Cjkjvfnby/declared_env"

requires-python = ">=3.9"


[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--showlocals",
]


[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN101", "ANN204", "ANN401",
    "D104", # no docstring in public package
    "D200", # One-line docstring should fit on one line with quotes
    "D212",
    "RSE102",
    "D203",
]
line-length = 98
target-version = "py39"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test/*" = ["D10", "D101", "D103", "S101", "ANN", "PLR2004"]
"./declared_env/_exceptions.py" = ["D107"]
"declared_env/_declared_variables.py" = ["FBT001", "FBT002"]

[tool.ruff.mccabe]
max-complexity = 5
